# AsynCUDA13.Shared/MediaDtos/AudioInfo.cs
@@ -1,13 +1,20 @@
 ﻿using System;
 using System.Collections.Generic;
 using System.Text;
+using System.Text.Json.Serialization;
 
 namespace AsynCUDA13.Shared.MediaDtos
 {
-    public class AudioInfo : IMediaInfo
+    public class AudioInfo
     {
+        public AudioInfo()
+        {
+        }
+
         public Guid Id { get; set; }
         public string Name { get; set; } = string.Empty;
+
+        public string MediaType { get; set; } = "audio";
 
         public int SampleRate { get; set; }
         public int Channels { get; set; }
@@ -20,7 +27,7 @@ namespace AsynCUDA13.Shared.MediaDtos
 
 
         public string? Pointer { get; set; } = null;
-        public bool OnGpu => !string.IsNullOrEmpty(this.Pointer) && !this.Pointer.Equals("null", StringComparison.OrdinalIgnoreCase) && !this.Pointer.Equals(IntPtr.Zero.ToString(), StringComparison.OrdinalIgnoreCase);
 
+        public bool OnGpu => !string.IsNullOrEmpty(this.Pointer) && !this.Pointer.Equals("null", StringComparison.OrdinalIgnoreCase) && !this.Pointer.Equals(IntPtr.Zero.ToString(), StringComparison.OrdinalIgnoreCase);
     }
 }
