# AsynCUDA13.Shared/MediaDtos/ImageData.cs
@@ -4,7 +4,7 @@ using System.Text;
 
 namespace AsynCUDA13.Shared.MediaDtos
 {
-    public class ImageData : IMediaData
+    public class ImageData
     {
         public required ImageInfo Info { get; set; }
 
@@ -12,6 +12,7 @@ namespace AsynCUDA13.Shared.MediaDtos
 
         public string MimeType { get; set; } = "image/png";
         public string Base64Data { get; set; } = string.Empty;
+        public string Base64Image => $"data:{this.MimeType};base64,{this.Base64Data}";
 
         public float DataSizeMb => this.Base64Data.LongCount() * 4f / 3f / 1024f / 1024f;
 
